--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "concurrently \"nest start --watch \" \"npx prisma studio\"",
-    "start:dev": "npx prisma db push && concurrently \"nest start --watch \" \"npx prisma studio\"",
+    "start:dev": "npx prisma db push && concurrently \"nest build \" \"npx prisma studio\"",
+    "start:build": "concurrently \"npm run build \" \"npx prisma studio\"",
     "prisma:reset": "npx prisma generate && npx prisma db push --force-reset && npx prisma format",
     "start:debug": "nest start --debug --watch",
     "start:install": "npm i -g @nestjs/cli && npm i -g @prisma/cli",
