--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "xoauth2": "^1.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
